--- a/LMS/Students/templates/Students/viewjournals.html
+++ b/LMS/Students/templates/Students/viewjournals.html
@@ -1,7 +1,10 @@
-{% extends "Books/base.html" %}
+{% extends "Students/base.html" %}
 {% block content %}
 <center>
 {% for j in jlist %}
 <h2>Journal Name</h2>{{ j.jname }}<br>
-<h2>Journal Year</h2>{{ j.jyear }}<br><br>{% endfor %}</center>
+<h2>Journal Year</h2>{{ j.jyear }}<br><br>
+    <a href="/deletejournal/{{ j.jid }}">Delete</a>
+    {% endfor %}
+</center>
 {% endblock %}
