--- a/LMS/Students/templates/Students/home.html
+++ b/LMS/Students/templates/Students/home.html
@@ -1,7 +1,7 @@
-{% extends "Books/base.html" %}
+{% extends "Students/base.html" %}
 {% block content %}
 <h1>This is Home Page</h1>
 <center>
-	<img src="{{ '/media/kl.png' }} " width=500 height=370>
+	<img src="{{ '/media/kl.png' }} " width=300 height=200>
 </center>
 {% endblock %}
