--- a/LMS/Students/templates/Students/login.html
+++ b/LMS/Students/templates/Students/login.html
@@ -1,15 +1,17 @@
-{% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'Students/styles.css' %}">
-</head>
-<body>
-<center>
-<b>Welcome to LMS login page</b>
-</center>
-</body>
-</html>
+{% extends "Students/base.html" %}
+{% block content %}
+   <center>
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Sign In</legend>
+                {{ form }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Sign In</button>
+            </div>
+        </form>
+        </div>
+       </center>
+{% endblock content %}
